// Vitest Snapshot v1

exports[`Server > should complete an M-of-N scheme 1`] = `
{
  "muSig": {
    "m": 2,
    "master": "aadd7a686a7404877c38f0d343716f8d1c71ae8515902485335228b259689f16c506d6c571228c24fceeb42cb7f2fc7b",
    "n": 3,
    "slaves": [
      "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
      "93e48f0084f3d3ac1c2c58a0f0e029d697f183b1d53f22c9cb0689d1448f7f6a0fcd8c6f7703c5b378392338bdee6ee8",
      "a0b72896d656c9a73ba34c2d38df03bf53257249f9515f57fa4276b838221a1e3aebde3f31d172ecac245220eef6c8ec",
    ],
  },
  "signatures": [
    {
      "id": "4bf94d385ec00d23a652717e384e1856d267dc8469092cd0d0d7b992a936976a",
      "publicKey": "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
      "signature": "b12e84192c4b0a1aa298c120b7c077f95bb46393322f4e48514e33c870e32fa93f1316b8a03a38f87c5c3ad350646c2e0da08b6f31efbed3eb43d5e99d0454d017a5396b940ad7fdb47e6bcdc8f438965a234f6b3a9f8e80c354892b51d1e1d5",
    },
    {
      "id": "09bba3b4ea213f652d4718747622aeb2e17846c79ed8bc15a6ea18135f94e4e3",
      "publicKey": "93e48f0084f3d3ac1c2c58a0f0e029d697f183b1d53f22c9cb0689d1448f7f6a0fcd8c6f7703c5b378392338bdee6ee8",
      "signature": "a79a90b1432d9d4f51fee6f7a9be8133e88204beadc1fdec22bddacfac3ea4baf636120f20eed1711591723a02b1e10f16a379f99a05b1f80dd6b56d4a5231459614b239e078c6a0e8353e399c8e199145a4854a7ad8004dc87aef49079dec54",
    },
  ],
}
`;

exports[`Server > should complete an N-of-N scheme 1`] = `
{
  "muSig": {
    "m": 3,
    "master": "aadd7a686a7404877c38f0d343716f8d1c71ae8515902485335228b259689f16c506d6c571228c24fceeb42cb7f2fc7b",
    "n": 3,
    "slaves": [
      "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
      "93e48f0084f3d3ac1c2c58a0f0e029d697f183b1d53f22c9cb0689d1448f7f6a0fcd8c6f7703c5b378392338bdee6ee8",
      "a0b72896d656c9a73ba34c2d38df03bf53257249f9515f57fa4276b838221a1e3aebde3f31d172ecac245220eef6c8ec",
    ],
  },
  "signatures": [
    {
      "id": "4bf94d385ec00d23a652717e384e1856d267dc8469092cd0d0d7b992a936976a",
      "publicKey": "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
      "signature": "b12e84192c4b0a1aa298c120b7c077f95bb46393322f4e48514e33c870e32fa93f1316b8a03a38f87c5c3ad350646c2e0da08b6f31efbed3eb43d5e99d0454d017a5396b940ad7fdb47e6bcdc8f438965a234f6b3a9f8e80c354892b51d1e1d5",
    },
    {
      "id": "09bba3b4ea213f652d4718747622aeb2e17846c79ed8bc15a6ea18135f94e4e3",
      "publicKey": "93e48f0084f3d3ac1c2c58a0f0e029d697f183b1d53f22c9cb0689d1448f7f6a0fcd8c6f7703c5b378392338bdee6ee8",
      "signature": "a79a90b1432d9d4f51fee6f7a9be8133e88204beadc1fdec22bddacfac3ea4baf636120f20eed1711591723a02b1e10f16a379f99a05b1f80dd6b56d4a5231459614b239e078c6a0e8353e399c8e199145a4854a7ad8004dc87aef49079dec54",
    },
    {
      "id": "267d857c3a01f739055a34028f1c2051769b0ead4ef33a0eeea06be81a8ba503",
      "publicKey": "a0b72896d656c9a73ba34c2d38df03bf53257249f9515f57fa4276b838221a1e3aebde3f31d172ecac245220eef6c8ec",
      "signature": "a0d64c09e49dc381fe59b24ee5bc80d21ee1fdbee9a1e49b501d98ef7fec1d909bf825e7e43f8ed616e2258404c78096174f7c173ad481c4cf7f1c4af76b4ae30b9828e6547523eb51b855af1d9ac6a7447e6e9e8b74a5d17966917113e63213",
    },
  ],
}
`;

exports[`Server > should list all txs 1`] = `
[
  {
    "hash": "0a05312e302e3012606161646437613638366137343034383737633338663064333433373136663864316337316165383531353930323438353333353232386232353936383966313663353036643663353731323238633234666365656234326362376632666337621a09726563697069656e7420012801321b0a0768616e646c6572120776657273696f6e1a076e6574776f726b",
    "muSig": {
      "m": 2,
      "master": "aadd7a686a7404877c38f0d343716f8d1c71ae8515902485335228b259689f16c506d6c571228c24fceeb42cb7f2fc7b",
      "n": 3,
      "slaves": [
        "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
        "93e48f0084f3d3ac1c2c58a0f0e029d697f183b1d53f22c9cb0689d1448f7f6a0fcd8c6f7703c5b378392338bdee6ee8",
        "a0b72896d656c9a73ba34c2d38df03bf53257249f9515f57fa4276b838221a1e3aebde3f31d172ecac245220eef6c8ec",
      ],
    },
    "signatures": [
      {
        "id": "4bf94d385ec00d23a652717e384e1856d267dc8469092cd0d0d7b992a936976a",
        "publicKey": "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
        "signature": "b12e84192c4b0a1aa298c120b7c077f95bb46393322f4e48514e33c870e32fa93f1316b8a03a38f87c5c3ad350646c2e0da08b6f31efbed3eb43d5e99d0454d017a5396b940ad7fdb47e6bcdc8f438965a234f6b3a9f8e80c354892b51d1e1d5",
      },
    ],
    "timestamp": 1652102041,
  },
]
`;

exports[`Server > should list pending txs 1`] = `
[
  {
    "hash": "0a05312e302e3012606161646437613638366137343034383737633338663064333433373136663864316337316165383531353930323438353333353232386232353936383966313663353036643663353731323238633234666365656234326362376632666337621a09726563697069656e7420012801321b0a0768616e646c6572120776657273696f6e1a076e6574776f726b",
    "muSig": {
      "m": 2,
      "master": "aadd7a686a7404877c38f0d343716f8d1c71ae8515902485335228b259689f16c506d6c571228c24fceeb42cb7f2fc7b",
      "n": 3,
      "slaves": [
        "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
        "93e48f0084f3d3ac1c2c58a0f0e029d697f183b1d53f22c9cb0689d1448f7f6a0fcd8c6f7703c5b378392338bdee6ee8",
        "a0b72896d656c9a73ba34c2d38df03bf53257249f9515f57fa4276b838221a1e3aebde3f31d172ecac245220eef6c8ec",
      ],
    },
    "signatures": [
      {
        "id": "4bf94d385ec00d23a652717e384e1856d267dc8469092cd0d0d7b992a936976a",
        "publicKey": "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
        "signature": "b12e84192c4b0a1aa298c120b7c077f95bb46393322f4e48514e33c870e32fa93f1316b8a03a38f87c5c3ad350646c2e0da08b6f31efbed3eb43d5e99d0454d017a5396b940ad7fdb47e6bcdc8f438965a234f6b3a9f8e80c354892b51d1e1d5",
      },
    ],
    "timestamp": 1652102041,
  },
]
`;

exports[`Server > should list ready txs 1`] = `
[
  {
    "hash": "0a05312e302e3012606161646437613638366137343034383737633338663064333433373136663864316337316165383531353930323438353333353232386232353936383966313663353036643663353731323238633234666365656234326362376632666337621a09726563697069656e7420012801321b0a0768616e646c6572120776657273696f6e1a076e6574776f726b",
    "muSig": {
      "m": 2,
      "master": "aadd7a686a7404877c38f0d343716f8d1c71ae8515902485335228b259689f16c506d6c571228c24fceeb42cb7f2fc7b",
      "n": 3,
      "slaves": [
        "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
        "93e48f0084f3d3ac1c2c58a0f0e029d697f183b1d53f22c9cb0689d1448f7f6a0fcd8c6f7703c5b378392338bdee6ee8",
        "a0b72896d656c9a73ba34c2d38df03bf53257249f9515f57fa4276b838221a1e3aebde3f31d172ecac245220eef6c8ec",
      ],
    },
    "signatures": [
      {
        "id": "4bf94d385ec00d23a652717e384e1856d267dc8469092cd0d0d7b992a936976a",
        "publicKey": "acaddab32e508845e601f6d67fce8d525b208fbcb8c437019cbff4154002cd0fd428497db89e2fae419390038e7bb9b6",
        "signature": "b12e84192c4b0a1aa298c120b7c077f95bb46393322f4e48514e33c870e32fa93f1316b8a03a38f87c5c3ad350646c2e0da08b6f31efbed3eb43d5e99d0454d017a5396b940ad7fdb47e6bcdc8f438965a234f6b3a9f8e80c354892b51d1e1d5",
      },
      {
        "id": "09bba3b4ea213f652d4718747622aeb2e17846c79ed8bc15a6ea18135f94e4e3",
        "publicKey": "93e48f0084f3d3ac1c2c58a0f0e029d697f183b1d53f22c9cb0689d1448f7f6a0fcd8c6f7703c5b378392338bdee6ee8",
        "signature": "a79a90b1432d9d4f51fee6f7a9be8133e88204beadc1fdec22bddacfac3ea4baf636120f20eed1711591723a02b1e10f16a379f99a05b1f80dd6b56d4a5231459614b239e078c6a0e8353e399c8e199145a4854a7ad8004dc87aef49079dec54",
      },
    ],
    "timestamp": 1652102041,
  },
]
`;
